T2: Mark the extra ball lamp.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -52,7 +52,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 13: Hold Bonus
 14: 6X
 15: 8X
-16: Free Ride
+16: Free Ride, shoot-again
 17: Skull Teeth
 21: Kickback
 22: Special
